# NTest

./: CMakeCache.txt  CMakeLists.txt  Makefile  VPN  cmake_install.cmake  main.cpp  newfile.txt
boot/: bootloader.asm
include/: application.h  kernel.h  slave.h  slavemanager.h
include/src/hal/: printf.h
kernel/: kernel.c  main.asm  printk.c
mm/: page.asm
src/: application.cpp  slave.cpp  slavemanager.cpp
